--- a/assets/header-sidebar.css
+++ b/assets/header-sidebar.css
@@ -81,8 +81,10 @@
 
 .mobilemenu__list__link {
     color: #ffffff;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-weight: 300;
 }
 
 .mobslist__link {
@@ -90,6 +92,8 @@
     transition: all 0.6s ease;
     font-size: 1.4rem;
     text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-weight: 300;
 }
 
 .icon-cross {
@@ -136,6 +140,7 @@
     margin-top: 8rem;
     flex: 1 1 auto;
     padding: 2rem 4rem;
+    overflow-y: auto;
 }
 
 .drawer-body {
